fixed scalability issues for contact page

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ svg{
     height: 5rem;
 }
 .nav-container{
-    height: 12vh;
+    height: 20vh;
 }
 
 a:link{
@@ -65,6 +65,7 @@ a:hover {
 }
 .cr-bt{
     height: 10%;
+    width: auto;
     background-color: gold; 
     color: black;
     border: none;
@@ -100,8 +101,9 @@ a:hover {
 }
 .text-fb{
     resize: none;
-    width: 30rem;
+    width: 100%;
     border: none;
+    border-radius: 5%;
     font-family: 'Libre Baskerville', serif;
     font-family: 'Neuton', serif;
 }
